--- a/package.json
+++ b/package.json
@@ -6,16 +6,32 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:tailwind": "tailwindcss --input input.css --output tailwind.css --no-autoprefixer && tailwind-rn",
+    "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~47.0.5",
+    "expo-application": "~5.0.1",
+    "expo-auth-session": "~3.7.2",
+    "expo-random": "~13.0.0",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.14.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-deck-swiper": "^2.0.11",
+    "react-native-restart": "^0.0.24",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "concurrently": "^7.5.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   },
   "private": true
 }
