--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-deck-swiper": "^2.0.11",
-    "react-native-restart": "^0.0.24",
+    "react-native-dotenv": "^3.4.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "tailwind-rn": "^4.2.0"
