--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "expo": "~47.0.5",
     "expo-application": "~5.0.1",
     "expo-auth-session": "~3.7.2",
+    "expo-calendar": "~11.0.1",
     "expo-random": "~13.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.14.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-calendar-events": "^2.2.0",
     "react-native-deck-swiper": "^2.0.11",
     "react-native-dotenv": "^3.4.2",
     "react-native-safe-area-context": "4.4.1",
